# babelnet-mcp

./: .gitgnore  README.md  babelnet_conf.yml.example  pyproject.toml
src/babelnet_mcp/: __init__.py  config.py  constants.py  http_client.py  server.py
src/babelnet_mcp/tools/: __init__.py  definition.py  sense.py  synset.py
