[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babelnet-mcp"
version = "0.1.0"
description = "MCP server for BabelNet API - semantic network and multilingual knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["mcp", "babelnet", "nlp", "semantic-network", "wordnet", "multilingual"]

dependencies = [
    "mcp>=0.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
babelnet-mcp = "babelnet_mcp.server:main"

[project.urls]
Homepage = "https://github.com/piperino11/babelnet-mcp"
Documentation = "https://github.com/piperino11/babelnet-mcp#readme"
Repository = "https://github.com/piperino11/babelnet-mcp"
Issues = "https://github.com/piperino11/babelnet-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/babelnet_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
